yaml/stackschools-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stackschools-app
  labels:
    app: stackschools
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stackschools
  template:
    metadata:
      labels:
        app: stackschools
    spec:
      containers:
        - image: suhailvs/stackschools:latest
          name: stackschools
          ports:
            - containerPort: 8000
              name: gunicorn
