yaml/stackschools-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stackschools
  labels:
    app: stackschools
spec:
  type: NodePort
  selector:
    app: stackschools
  ports:
    - port: 8000
      targetPort: 8000
