yaml/stackschools-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackschools-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - stack.pw
    secretName: stackschools-tls
  rules:
  - host: stack.pw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stackschools
            port: 
              number: 8000
